# LLMPythonConversions

./: .gitignore  README.md  add-python-rule.sh  benchmark-c.sh  benchmark-kd-tree.sh  benchmark-photometry.sh  benchmark-python.sh  benchmark-rust.sh  build-all.sh  create-outputs.sh  distribute-makefiles.sh  generate-inputs.sh  move-pythons.sh  processTimes.scala  times-c.txt  times-kd-tree.txt  times-photometry.txt  times-python.txt  times-rust.txt
Photometry/: QuaoarRingOccs_v01-AAS-noplot.py
Photometry/ChatGPT/: Cargo.toml.gen  Makefile  Photometry.c  Photometry.rs  lightcurve.csv
Photometry/ChatGPT/photometry_rust/: Cargo.toml
Photometry/Claude/: Cargo.toml  Makefile  Photometry.c  Photometry.rs  lightcurve_flat_tau01.txt  quaoar_high_res.csv  quaoar_lightcurves.csv  quaoar_wider_ring.csv
Photometry/Claude/photometry_rust/: Cargo.toml  quaoar_high_res.csv  quaoar_lightcurves.csv  quaoar_wider_ring.csv
Photometry/Gemini2.5/: Makefile  Photometry.c  Photometry.c.bad  lightcurve.txt
Photometry/Gemini2.5/photometry_rust/: Cargo.toml
Photometry/Human/: Makefile  QuaoarRingOccs_v01-AAS.py
binary-trees/Version2/ChatGPT/: Makefile  binary-trees2  binary-trees2.c  binary-trees2.rs
binary-trees/Version2/Claude/: Cargo.toml  Makefile  binary-trees2.c  binary-trees2.rs
binary-trees/Version2/Gemini2.5/: Makefile  binary-trees2.c  binary-trees2.c.flash  binary-trees2c
binary-trees/Version2/Human/: Makefile
binary-trees/Version4/ChatGPT/: binary-trees4.c  binary-trees4.rs
binary-trees/Version4/Claude/: Cargo.toml.gen  Makefile  binary-trees4.c
binary-trees/Version4/Gemini2.5/: Makefile  binary-trees4.c  binary-trees4c
binary-trees/Version4/Human/: Makefile
fannkuch-redux/Version4/: fannkuch-redux4.py
fannkuch-redux/Version4/ChatGPT/: Cargo.toml  Makefile  fannduch-redux4.c
fannkuch-redux/Version4/Claude/: Cargo.toml  Makefile  fannkuch-redux4.c
fannkuch-redux/Version4/Gemini2.5/: Makefile  frannkuch-redux.c  frannkuch-redux.c.bad  frannkuch-redux.c.flash  main  main.rs.flash
fannkuch-redux/Version4/Human/: Makefile
fannkuch-redux/Version6/ChatGPT/: Makefile  funnkuch-redux6  funnkuch-redux6.c  funnkuch-redux6.rs
fannkuch-redux/Version6/Claude/: Makefile  fannkuch-redux6.c
fannkuch-redux/Version6/Gemini2.5/: Makefile  frannkuch-redux.c  frannkuch-redux.c.flash  main  (+1 more)
fasta/: run.sh
k-nuclcotide/Version8/: k-nuclcotide8.py
k-nuclcotide/Version8/Claude/: Cargo.toml  Makefile  k-nuclcotide8-opt.rs  k-nuclcotide8.c  k-nuclcotide8.rs
k-nuclcotide/Version8/Claude/k_nuclcotide8_rust/: Cargo.toml
mandelbrot/Version7/Claude/: Cargo.toml  Makefile  mandelbrot7-opt.c  mandelbrot7-opt.rs  mandelbrot7.c
mandelbrot/Version7/Claude/mandelbrot7_rust/: Cargo.toml
mandelbrot/Version7/Claude/mandelbrot7_rust/src/: main.rs
nbody/: .gitignore  Makefile  nbody.rs
nbody/ChatGPT/: nbody.c
nbody/Claude/: Cargo.toml  nbody-opt.rs  nbody.c  nbody.rs
nbody/Version1/Claude/nbody_rust/: Cargo.toml
pidigits/Version4/Claude/pidigits4_rust/: Cargo.toml
pidigits/Version4/Claude/pidigits4_rust/src/: main.rs
regex-redux/Version2/: regex-redux2.py
reverse-complement/: revcomp-input.txt
reverse-complement/Version5/: reverse-complement5.py
reverse-complement/Version6/: reverse-complement6.py
spectral-norm/Version4/: spectral-norm4.py
spectral-norm/Version6/: spectral-norm6.py
(+292 files in other folders)
