[package]
name = "k_nucleotide"
version = "0.1.0"
edition = "2021"
authors = ["Claude"]

# Define multiple binaries for different implementations
[[bin]]
name = "k_nucleotide"
path = "src/k_nucleotide.rs"

[[bin]]
name = "k_nucleotide_optimized"
path = "src/k_nucleotide_optimized.rs"

# Dependencies
[dependencies]
# For parallel processing
rayon = "1.8.0"

# For faster hash maps
rustc-hash = "1.1.0"

# Optimization settings for release build
[profile.release]
opt-level = 3             # Maximum optimization
lto = true                # Link-time optimization
codegen-units = 1         # Single-unit optimization
panic = "abort"           # Smaller code size without unwinding on panics