[package]
name = "pidigits4_rust"
version = "0.1.0"
edition = "2024"

# Dependencies for the num_bigint implementation
[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.17"
rust-gmp = "0.5.0"

# Optimization settings for release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
